ADD project details

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <section id="projects" class="projects-section">
             <h2>FEATURED PROJECTS</h2>
             <div class="projects-grid">
-                <div class="project-card">
+                <div class="project-card" id="brain-trauma-project">
                     <div class="project-image">
                         <img src="./pics/brain_injury.png" alt="Brain Trauma Injury Foundation Model" />
                     </div>
@@ -124,13 +124,13 @@
                             <span class="achievement">🎯 Clinical Impact</span>
                         </div>
                         <div class="project-actions">
-                            <a href="#" class="btn-demo">📱 Demo</a>
+                            <a href="projects/brain-trauma-injury.html" class="btn-demo">📱 Details</a>
                             <a href="#" class="btn-source">💻 Source Code</a>
                         </div>
                     </div>
                 </div>
                 
-                <div class="project-card">
+                <div class="project-card" id="tb-cough-project">
                     <div class="project-image">
                         <img src="./pics/tb_cough.png" alt="TB Cough Classification" />
                     </div>
@@ -156,13 +156,13 @@
                             <span class="achievement">🎯 Clinical Impact</span>
                         </div>
                         <div class="project-actions">
-                            <a href="#" class="btn-demo">📱 Demo</a>
+                            <a href="projects/tb-cough-classification.html" class="btn-demo">📱 Details</a>
                             <a href="#" class="btn-source">💻 Source Code</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="project-card">
+                <div class="project-card" id="burn-diagnosis-project">
                     <div class="project-image">
                         <img src="./pics/skin_burn.png" alt="Burn Diagnosis AI Challenge" />
                     </div>
@@ -192,13 +192,13 @@
                             <span class="achievement">🏅 3rd Place</span>
                         </div>
                         <div class="project-actions">
-                            <a href="#" class="btn-demo">📱 Demo</a>
+                            <a href="projects/burn-diagnosis-ai.html" class="btn-demo">📱 Details</a>
                             <a href="#" class="btn-source">💻 Source Code</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="project-card">
+                <div class="project-card" id="als-communication-project">
                     <div class="project-image">
                         <img src="./pics/look_to_speak.webp" alt="ALS Communication System" />
                     </div>
@@ -225,7 +225,7 @@
                             <span class="achievement">❤️ Patient Impact</span>
                         </div>
                         <div class="project-actions">
-                            <a href="#" class="btn-demo">📱 Demo</a>
+                            <a href="projects/als-communication-system.html" class="btn-demo">📱 Details</a>
                             <a href="#" class="btn-source">💻 Source Code</a>
                         </div>
                     </div>
