ADD project source code link

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                         <div class="project-actions">
                             <a href="projects/brain-trauma-injury.html" class="btn-demo">📱 Details</a>
-                            <a href="#" class="btn-source">💻 Source Code</a>
+                            <a href="https://github.com/your-username/brain-trauma-injury" class="btn-source" target="_blank">💻 Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <div class="project-content">
                         <div class="project-header">
                             <h3>🏆 Tuberculosis Cough Classification</h3>
-                            <span class="project-date">2025</span>
+                            <span class="project-date">2025 | Ongoing</span>
                         </div>
                         <p class="project-description">
                             Developing an AI system to detect tuberculosis from cough sounds, making TB screening more accessible in resource-limited settings and helping healthcare workers identify cases earlier to save lives.
@@ -157,7 +157,7 @@
                         </div>
                         <div class="project-actions">
                             <a href="projects/tb-cough-classification.html" class="btn-demo">📱 Details</a>
-                            <a href="#" class="btn-source">💻 Source Code</a>
+                            <a href="https://github.com/your-username/tb-cough-classification" class="btn-source" target="_blank">💻 Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                         </div>
                         <div class="project-actions">
                             <a href="projects/burn-diagnosis-ai.html" class="btn-demo">📱 Details</a>
-                            <a href="#" class="btn-source">💻 Source Code</a>
+                            <a href="https://github.com/wJJin/burn-diagnosis-ai-challenge" class="btn-source" target="_blank">💻 Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                         </div>
                         <div class="project-actions">
                             <a href="projects/als-communication-system.html" class="btn-demo">📱 Details</a>
-                            <a href="#" class="btn-source">💻 Source Code</a>
+                            <a href="https://github.com/born-june04/Look_to_Speak" class="btn-source" target="_blank">💻 Source Code</a>
                         </div>
                     </div>
                 </div>
