ADD other projects

--- a/projects/brain-trauma-injury.html
+++ b/projects/brain-trauma-injury.html
@@ -226,9 +226,10 @@
               <div>
                 <p><strong>Core investigators</strong></p>
                 <ul>
+                  <li>MS June Lee — Project Lead, Data engineering & model operations</li>
                   <li>MS Benjamin Han — Data engineering & model operations</li>
                   <li>MS Pari — Applied ML & multimodal fusion</li>
-                  <li>PhD Rupak Rajachar — Model architecture & radiology imaging</li>
+                  <li>PhD Rupak Rajachar — Project Advisor</li>
                   <li>MD Diana Wiseman — Neurosurgery lead, clinical labeling & validation</li>
                   <li>MD Jamie Ott, MD Heather Barnett — Orthopedics clinical partners</li>
                   <li>MD Christopher Lewis — Rehabilitation medicine, outcomes & SDOH integration</li>
@@ -283,7 +284,7 @@
             <h3>Contact & next steps</h3>
             <p>If you're interested in collaborating, contributing labeled data, or reviewing the governance plan, please contact the project leads:</p>
             <ul>
-              <li>MD Diana Wiseman — wisedb@uw.edu</li>
+              <li>MS June Lee — june0604@uw.edu</li>
               <li>Core team: Benjamin Han, Pari (MS), PhD Rupak Rajachar — (internal UW contacts)</li>
             </ul>
         </div>
