FIX burn project

--- a/projects/burn-diagnosis-ai.html
+++ b/projects/burn-diagnosis-ai.html
@@ -264,9 +264,9 @@
               <div>
                 <p><strong>Core team</strong></p>
                 <ul>
-                  <li>MS June Lee — Project Lead, Computer Vision & Model Development</li>
+                  <li>BS June Lee — Project Lead, Computer Vision & Model Development</li>
                   <li>BS Woo-Jin Jeong — Data Engineering & Preprocessing</li>
-                  <li>PhD Jeong-Hwa Kang — Faculty Advisor, Bioengineering</li>
+                  <li>PhD Jeong-Hwa Kang — Validation & Evaluation</li>
                 </ul>
               </div>
               <div>
@@ -315,12 +315,6 @@
             <h3>Recognition & impact</h3>
             <p>This project received 3rd place in the national AI challenge, demonstrating the potential of AI in emergency medicine. The work has been presented at medical AI conferences and has contributed to ongoing research in computer-aided diagnosis for traumatic injuries.</p>
 
-            <h3>Contact & collaboration</h3>
-            <p>For questions about this project or potential collaborations:</p>
-            <ul>
-              <li>MS June Lee — june0604@uw.edu</li>
-              <li>PhD Jeong-Hwa Kang — jhkang@hufs.ac.kr</li>
-            </ul>
         </div>
     </div>
 </body>
