--- a/projects/als-communication-system.html
+++ b/projects/als-communication-system.html
@@ -226,7 +226,7 @@
         </div>
 
         <div class="figure-container">
-            <img src="../pics/als/figure1.png" alt="Look to Speak Application Interface" class="project-detail-image">
+            <img src="/pics/als/figure1.png" alt="Look to Speak Application Interface" class="project-detail-image">
             <div class="figure-caption">Figure 1: 'Look-to-Speak' Application Interface</div>
         </div>
         
@@ -246,7 +246,7 @@
             <p>SpeAKN (Speak for ALS with Korean NLP) is an innovative AI-powered communication system designed specifically for ALS patients who have lost their ability to speak. The system combines eye-tracking technology with advanced Korean natural language processing to provide contextually appropriate response suggestions, enabling meaningful communication for patients with progressive motor function decline.</p>
 
             <div class="figure-container">
-                <img src="../pics/als/figure2.png" alt="AI-TRACKING System Pipeline">
+                <img src="/pics/als/figure2.png" alt="AI-TRACKING System Pipeline">
                 <div class="figure-caption">Figure 2: Overall model architecture overview. Two AI models were used: the first model processes voice data, and the second model uses the sentence output from the first model as input to generate final response sentences.</div>
             </div>
 
@@ -266,7 +266,7 @@
             </ol>
 
             <div class="figure-container">
-                <img src="../pics/als/figure6.png" alt="SpeAKN Model Architecture">
+                <img src="/pics/als/figure6.png" alt="SpeAKN Model Architecture">
                 <div class="figure-caption">Figure 6: Overall architecture of the SpeAKN model. Composed of Wav2Text and Text2Text models, appropriately utilizing transformer encoder and self-attention layers. Unlike existing models, a GRU layer was added to focus on learning Korean word order.</div>
             </div>
 
@@ -286,7 +286,7 @@
             <p>We experimentally tested various optimization approaches:</p>
 
             <div class="figure-container">
-                <img src="../pics/als/figure3.png" alt="Optimizer Comparison">
+                <img src="/pics/als/figure3.png" alt="Optimizer Comparison">
                 <div class="figure-caption">Figure 3: X-axis represents training epochs, Y-axis represents training time. Shows that the AdamW Optimizer's training time stabilizes during the learning process.</div>
             </div>
 
@@ -301,7 +301,7 @@
             </ul>
 
             <div class="figure-container">
-                <img src="../pics/als/figure4.png" alt="LSTM vs GRU Comparison">
+                <img src="/pics/als/figure4.png" alt="LSTM vs GRU Comparison">
                 <div class="figure-caption">Figure 4: (Top) LSTM layer, (Bottom) GRU layer. Moving rightward shows the parameters of learned hidden states. Compared to the LSTM layer, the GRU layer shows that red parameters (vanishing gradients) disappear at H5.</div>
             </div>
 
@@ -309,7 +309,7 @@
             <p>To handle varying audio lengths efficiently, we analyzed the distribution of audio data lengths:</p>
 
             <div class="figure-container">
-                <img src="../pics/als/figure5.png" alt="Audio Length Distribution">
+                <img src="/pics/als/figure5.png" alt="Audio Length Distribution">
                 <div class="figure-caption">Figure 5: Histogram representation of audio data lengths. The maximum length is 220,000 while the average is 25,000, approximately 10 times smaller. By setting audio data length to 100,000, we can avoid the curse of dimensionality.</div>
             </div>
 
@@ -350,7 +350,7 @@
             <p>To verify model learning effectiveness, we visualized attention patterns:</p>
 
             <div class="figure-container">
-                <img src="../pics/als/figure7.png" alt="Attention Visualization">
+                <img src="/pics/als/figure7.png" alt="Attention Visualization">
                 <div class="figure-caption">Figure 7: Visualizing Attention - Analysis showed the model needed improvement in focusing on important linguistic features.</div>
             </div>
 
@@ -358,7 +358,7 @@
             <p>Our analysis revealed important insights about the training data:</p>
 
             <div class="figure-container">
-                <img src="../pics/als/figure8.png" alt="Training Data Distribution">
+                <img src="/pics/als/figure8.png" alt="Training Data Distribution">
                 <div class="figure-caption">Figure 8: Pie chart showing the data actually used for training - Only 14.3% of the original dataset consisted of meaningful question-answer pairs.</div>
             </div>
 
@@ -371,7 +371,7 @@
             </div>
 
             <div class="figure-container">
-                <img src="../pics/als/figure10.png" alt="Token Distribution">
+                <img src="/pics/als/figure10.png" alt="Token Distribution">
                 <div class="figure-caption">Figure 10: Pie chart showing the proportion of tokens by frequency of appearance - 53.8% of tokens appeared only once, suggesting the need for better handling of rare tokens.</div>
             </div>
 
@@ -379,17 +379,17 @@
             <p>The final system integrates eye-tracking technology for user interaction. When a question like "아픈 곳은 없어요?" (Do you have any pain?) is processed, the system generates contextually appropriate response options that patients can select through eye movements.</p>
 
             <div class="figure-container">
-                <img src="../pics/als/fig11-1.png" alt="Eye-tracking Interface 1">
+                <img src="/pics/als/fig11-1.png" alt="Eye-tracking Interface 1">
                 <div class="figure-caption">Figure 11-1: Eye-Tracking Implementation - Initial interface with response options</div>
             </div>
 
             <div class="figure-container">
-                <img src="../pics/als/fig11-2.png" alt="Eye-tracking Interface 2">
+                <img src="/pics/als/fig11-2.png" alt="Eye-tracking Interface 2">
                 <div class="figure-caption">Figure 11-2: Eye-Tracking Implementation - Response selection process</div>
             </div>
 
             <div class="figure-container">
-                <img src="../pics/als/fig11-3.png" alt="Eye-tracking Interface 3">
+                <img src="/pics/als/fig11-3.png" alt="Eye-tracking Interface 3">
                 <div class="figure-caption">Figure 11-3: Eye-Tracking Implementation - Final response confirmation</div>
             </div>
 
