FIX als project figures

--- a/projects/als-communication-system.html
+++ b/projects/als-communication-system.html
@@ -226,7 +226,7 @@
         </div>
 
         <div class="figure-container">
-            <img src="/pics/als/fig1.png" alt="Look to Speak Application Interface" class="project-detail-image">
+            <img src="/pics/als/fig1.png" alt="Look to Speak Application Interface" style="max-width: 400px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
             <div class="figure-caption">Figure 1: 'Look-to-Speak' Application Interface</div>
         </div>
         
