--- a/projects/burn-diagnosis-ai.html
+++ b/projects/burn-diagnosis-ai.html
@@ -181,7 +181,7 @@
         <img src="../pics/skin_burn.png" alt="Burn Diagnosis AI Challenge" class="project-detail-image">
         
         <div style="text-align: center; margin: 32px 0;">
-            <img src="../pics/burn-diagnosis-3rd-place.pdf" alt="3rd Place Certificate" style="max-width: 600px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+            <img src="../pics/burn-diagnosis-3rd-place.png" alt="3rd Place Certificate" style="max-width: 600px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
             <p style="margin-top: 16px; color: #666; font-style: italic;">3rd Place Award Certificate - Seoul National University Hospital AI Challenge</p>
         </div>
 
