FIX profile name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="./pics/profile.jpeg" alt="Profile">
             </div>
             <div class="profile-info">
-                <h1>Junhyeok Lee</h1>
+                <h1>Junhyeok(June) Lee</h1>
                 <div class="profile-title">
                     <span>💼</span>
                     <span>Research Engineer</span>
