--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="action-buttons">
                     <a href="#contact" class="btn btn-primary">CONTACT ME</a>
-                    <a href="RESUME_09282025.pdf" class="btn btn-secondary" target="_blank">VIEW RESUME</a>
+                    <a href="Resume_2025_09_28.pdf" class="btn btn-secondary" target="_blank">VIEW RESUME</a>
                 </div>
                 <div class="social-links">
                     <a href="#">
