--- a/projects/brain-trauma-injury.html
+++ b/projects/brain-trauma-injury.html
@@ -204,8 +204,9 @@
                 <p><strong>Core investigators</strong></p>
                 <ul>
                   <li>MS June Lee — Project Lead, Data engineering & model operations</li>
-                  <li>MS Benjamin Han — Data engineering & model operations</li>
-                  <li>MS Pari — Applied ML & multimodal fusion</li>
+                  <li>MS Benjamin Han — Data Scientist, Data engineering & model operations</li>
+                  <li>MS Mary Nguyen — Fullstack, Data Engineering</li>
+                  <li>DO Asouri Souri — Neurology, Data Analysis</li>
                   <li>PhD Rupak Rajachar — Project Advisor</li>
                   <li>MD Diana Wiseman — Neurosurgery lead, clinical labeling & validation</li>
                   <li>MD Jamie Ott, MD Heather Barnett — Orthopedics clinical partners</li>
