FIX tbi contributor

--- a/projects/brain-trauma-injury.html
+++ b/projects/brain-trauma-injury.html
@@ -263,7 +263,7 @@
             <p>If you're interested in collaborating, contributing labeled data, or reviewing the governance plan, please contact the project leads:</p>
             <ul>
               <li>MS June Lee — june0604@uw.edu</li>
-              <li>Core team: Benjamin Han, Pari (MS), PhD Rupak Rajachar — (internal UW contacts)</li>
+              <li>Core team: Benjamin Han, Mary Nguyen, Asouri Souri, Rupak Rajachar — (internal UW contacts)</li>
             </ul>
         </div>
     </div>
