FIX tbi contributor

--- a/projects/brain-trauma-injury.html
+++ b/projects/brain-trauma-injury.html
@@ -211,6 +211,8 @@
                   <li>MD Diana Wiseman — Neurosurgery lead, clinical labeling & validation</li>
                   <li>MD Jamie Ott, MD Heather Barnett — Orthopedics clinical partners</li>
                   <li>MD Christopher Lewis — Rehabilitation medicine, outcomes & SDOH integration</li>
+                  <li>PhD Vikash Gupta — Sr.Solution Architect, AWS Healthcare</li>
+                  <li>PhD Ujjwal Ratan — Machine Learning Team Leader, AWS Healthcare</li>
                 </ul>
               </div>
               <div>
